--- a/Memory Matching Game/Properties/Resources.resx
+++ b/Memory Matching Game/Properties/Resources.resx
@@ -118,31 +118,37 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Space Memory Game Worksheet" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Space Memory Game Worksheet.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="hart" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pic\hart.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Memory Game " type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Memory Game .png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="im1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pic\im1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Back card" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pic\Back card.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="im2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pic\im2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="im3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pic\im3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="im4" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pic\im4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="im6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pic\im6.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="im5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pic\im5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="im6" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pic\im6.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="hart" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pic\hart.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Space Memory Game Worksheet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Space Memory Game Worksheet.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="im4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pic\im4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="im1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pic\im1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="im3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pic\im3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Memory Game " type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Memory Game .png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Back card1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pic\Back card.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
